feat: добавлен мета-тег Google Site Verification

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Movie Planner Bot - сервис для планирования просмотра фильмов и сериалов. Watchlist tracker, series tracker, movie planning service для киноманов и синефилов. Telegram-бот и браузерное расширение.">
     <meta name="keywords" content="movie planner, watchlist tracker, series tracker, movie tracking, TV show tracker, Telegram bot, movie planning service, film database, cinema planning, movie recommendations, series tracking, watchlist management, movie organizer, film collection manager, cinema bot, movie reminder, premiere tracker, ticket storage, online cinema tracker, streaming tracker, Амедиатека, Okko, ivi, Kinopoisk, IMDb, Letterboxd, Trakt alternative, Letterboxd alternative">
+    <meta name="google-site-verification" content="BUJSpGPrPkPnVgLV2eHrFrPVTuumNdtDUwbI9CzQVwM" />
     <title>Movie Planner Bot — Планировщик кино для Telegram</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
