--- a/index.html
+++ b/index.html
@@ -13,6 +13,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Site Header -->
+    <header class="site-header" id="site-header">
+        <div class="container header-inner">
+            <a href="#" class="header-logo" data-landing="landing">Movie Planner Bot</a>
+            <nav class="header-nav">
+                <button type="button" class="btn btn-small btn-primary" data-action="login">Войти</button>
+                <a href="#" class="header-cabinet hidden" data-action="cabinet-name" id="header-cabinet-name"></a>
+                <button type="button" class="btn btn-small btn-secondary hidden" data-action="logout">Выйти</button>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Login Modal -->
+    <div class="modal-overlay hidden" id="login-modal">
+        <div class="modal-backdrop" data-action="close-login"></div>
+        <div class="modal-box">
+            <button type="button" class="modal-close" data-action="close-login" aria-label="Закрыть">&times;</button>
+            <h2 class="modal-title">Вход в личный кабинет</h2>
+            <p class="modal-text">Получите одноразовый код в Telegram-боте и введите его ниже. Код можно получить в боте командой <strong>/code</strong> или по кнопке ниже.</p>
+            <a href="https://t.me/movie_planner_bot?start=code" class="btn btn-primary modal-cta" target="_blank" rel="noopener">Получить код в Telegram</a>
+            <form id="login-form" class="login-form">
+                <label for="login-code">Код</label>
+                <input type="text" id="login-code" name="code" placeholder="XXXX" maxlength="8" autocomplete="one-time-code" class="input-code">
+                <p class="login-status" id="login-status"></p>
+                <button type="submit" class="btn btn-primary">Войти</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Landing (main page when not logged in) -->
+    <main id="landing">
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
@@ -140,6 +171,174 @@
             </div>
         </div>
     </section>
+    </main>
+
+    <!-- Cabinet: Read-only (user has data) -->
+    <main id="cabinet-readonly" class="hidden cabinet">
+        <div class="container">
+            <div class="cabinet-nav">
+                <button type="button" class="cabinet-nav-btn active" data-section="plans">📋 Планы</button>
+                <button type="button" class="cabinet-nav-btn" data-section="unwatched">🎬 Непросмотренные</button>
+                <button type="button" class="cabinet-nav-btn" data-section="series">📺 Сериалы</button>
+                <button type="button" class="cabinet-nav-btn" data-section="ratings">⭐ Последние оценки</button>
+                <button type="button" class="cabinet-nav-btn" data-section="about">ℹ️ О проекте</button>
+            </div>
+            <div class="cabinet-plans-today" id="plans-today-wrap">
+                <h3 class="cabinet-subtitle">Планы на ближайшее время</h3>
+                <div class="plans-today-list" id="plans-today"></div>
+            </div>
+            <div class="cabinet-sections">
+                <section id="section-plans" class="cabinet-section">
+                    <h2 class="section-title">📋 Планы</h2>
+                    <div class="plans-split">
+                        <div>
+                            <h3>🏠 Дома</h3>
+                            <div id="plans-home-list" class="cards-list"></div>
+                        </div>
+                        <div>
+                            <h3>🎥 В кино</h3>
+                            <div id="plans-cinema-list" class="cards-list"></div>
+                        </div>
+                    </div>
+                </section>
+                <section id="section-unwatched" class="cabinet-section hidden">
+                    <h2 class="section-title">🎬 Непросмотренные</h2>
+                    <p class="cabinet-hint">Просмотр с компа. Управление — только в Telegram.</p>
+                    <div id="unwatched-list" class="cards-list"></div>
+                </section>
+                <section id="section-series" class="cabinet-section hidden">
+                    <h2 class="section-title">📺 Сериалы</h2>
+                    <p class="cabinet-hint">Прогресс и управление — в Telegram.</p>
+                    <div id="series-list" class="cards-list"></div>
+                </section>
+                <section id="section-ratings" class="cabinet-section hidden">
+                    <h2 class="section-title">⭐ Последние оценки</h2>
+                    <div id="ratings-list" class="cards-list"></div>
+                </section>
+                <section id="section-about" class="cabinet-section hidden cabinet-about">
+                    <h2 class="section-title">ℹ️ О проекте</h2>
+                    <div class="about-project-text">
+                        <p>Привет!</p>
+                        <p>Меня зовут Никита, и я создал этот сервис. Это частный проект от человека, который любит кино, и хочет, чтобы другие люди тоже могли комфортно смотреть фильмы и сериалы, ходить в кинотеатры, объединяться вместе и делиться своими увлечениями. Вы можете связаться со мной, если у вас есть вопросы или пожелания: <a href="https://t.me/zapnikita95" target="_blank" rel="noopener">@zapnikita95</a></p>
+                        <p>
+                            <a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol" target="_blank" rel="noopener">Официальное расширение в Chrome</a><br>
+                            <a href="https://vc.ru/telegram/2707791-movie-planner-bot-telegram-servis-dlya-planirovaniya-filmov-i-serialov" target="_blank" rel="noopener">Статья на vc</a><br>
+                            <a href="https://pikabu.ru/story/..." target="_blank" rel="noopener">Посты-история на Пикабу</a>
+                        </p>
+                        <p>Буду рад любой обратной связи!</p>
+                        <div class="about-photo-wrap"><img src="images/author.jpg" alt="Никита" class="about-photo" onerror="this.style.display='none'"></div>
+                    </div>
+                    <div class="faq-block">
+                        <h3>F.A.Q.</h3>
+                        <div class="faq-item">
+                            <div class="faq-head">Как начать пользоваться сервисом?</div>
+                            <div class="faq-body">Откройте Telegram-бота Movie Planner или установите расширение для Chrome. В боте нажмите /start — бот подскажет дальнейшие шаги. Для входа на сайт получите код командой /code в боте и введите его в форме «Войти».</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Как добавить первый фильм?</div>
+                            <div class="faq-body">В боте: отправьте ссылку на фильм с Кинопоиска или IMDb, либо воспользуйтесь поиском в меню. В расширении: откройте страницу фильма на Кинопоиске или IMDb и нажмите кнопку расширения «Добавить в Movie Planner».</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Как удалить информацию из бота?</div>
+                            <div class="faq-body">В Telegram-боте откройте карточку фильма или сериала и используйте кнопку удаления. Управление данными доступно только в боте — на сайте отображается только просмотр.</div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </main>
+
+    <!-- Cabinet: Onboarding (user logged in, empty base) -->
+    <main id="cabinet-onboarding" class="hidden cabinet">
+        <div class="container">
+            <div class="cabinet-nav">
+                <button type="button" class="cabinet-nav-btn active" data-section="onboard-main">Главная</button>
+                <button type="button" class="cabinet-nav-btn" data-section="onboard-plans">📋 Планы</button>
+                <button type="button" class="cabinet-nav-btn" data-section="onboard-unwatched">🎬 Непросмотренные</button>
+                <button type="button" class="cabinet-nav-btn" data-section="onboard-series">📺 Сериалы</button>
+                <button type="button" class="cabinet-nav-btn" data-section="onboard-ratings">⭐ Оценки</button>
+                <button type="button" class="cabinet-nav-btn" data-section="onboard-about">ℹ️ О проекте</button>
+            </div>
+            <div class="cabinet-sections onboarding-sections">
+                <section id="section-onboard-main" class="cabinet-section">
+                    <h1 class="cabinet-welcome">👋 Добро пожаловать в Movie Planner</h1>
+                    <p class="cabinet-empty-lead">У вас пока нет фильмов в базе</p>
+                    <p class="cabinet-onboard-intro">Два способа начать:</p>
+                    <div class="onboard-scenarios">
+                        <div class="onboard-card">
+                            <h3>📲 Telegram</h3>
+                            <p><a href="https://t.me/movie_planner_bot" target="_blank" rel="noopener">Откройте Telegram-бота</a></p>
+                            <ul>
+                                <li>Откройте Telegram-бота</li>
+                                <li>Найдите интересный фильм</li>
+                                <li>Или пришлите ссылку с Кинопоиска / IMDb</li>
+                                <li>Планируйте просмотр на выходные</li>
+                            </ul>
+                            <a href="https://t.me/movie_planner_bot?start=start" class="btn btn-primary" target="_blank" rel="noopener">Открыть бота</a>
+                        </div>
+                        <div class="onboard-card">
+                            <h3>💻 Расширение</h3>
+                            <p><a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol" target="_blank" rel="noopener">Установите расширение</a></p>
+                            <ul>
+                                <li>Установите расширение</li>
+                                <li>Найдите фильм на Kinopoisk или IMDb</li>
+                                <li>Смотрите любимые стриминги</li>
+                                <li>Добавляйте фильмы в базу</li>
+                                <li>Планируйте просмотр на выходные</li>
+                            </ul>
+                            <a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol" class="btn btn-secondary" target="_blank" rel="noopener">Установить расширение</a>
+                        </div>
+                    </div>
+                    <p class="cabinet-onboard-note">💡 Это онбординг — начните с бота или расширения, и здесь появятся ваши фильмы.</p>
+                </section>
+                <section id="section-onboard-plans" class="cabinet-section hidden">
+                    <h2 class="section-title">📋 Планы</h2>
+                    <p class="onboard-empty-hint">Планов пока нет. Добавьте фильм в боте и запланируйте просмотр — тогда он появится здесь.</p>
+                    <a href="https://t.me/movie_planner_bot?start=start" class="btn btn-primary" target="_blank" rel="noopener">Открыть меню в Telegram</a>
+                </section>
+                <section id="section-onboard-unwatched" class="cabinet-section hidden">
+                    <h2 class="section-title">🎬 Непросмотренные</h2>
+                    <p class="onboard-empty-hint">Добавьте первый фильм в боте (поиск или ссылка с Кинопоиска/IMDb) или через расширение — он появится здесь.</p>
+                    <a href="https://t.me/movie_planner_bot?start=start" class="btn btn-primary" target="_blank" rel="noopener">Открыть меню в Telegram</a>
+                </section>
+                <section id="section-onboard-series" class="cabinet-section hidden">
+                    <h2 class="section-title">📺 Сериалы</h2>
+                    <p class="onboard-empty-hint">Добавьте сериал в боте — здесь будет отображаться прогресс просмотра.</p>
+                    <a href="https://t.me/movie_planner_bot?start=start" class="btn btn-primary" target="_blank" rel="noopener">Открыть меню в Telegram</a>
+                </section>
+                <section id="section-onboard-ratings" class="cabinet-section hidden">
+                    <h2 class="section-title">⭐ Последние оценки</h2>
+                    <p class="onboard-empty-hint">После просмотра поставьте оценку в боте — она появится здесь.</p>
+                    <a href="https://t.me/movie_planner_bot?start=start" class="btn btn-primary" target="_blank" rel="noopener">Открыть меню в Telegram</a>
+                </section>
+                <section id="section-onboard-about" class="cabinet-section hidden cabinet-about">
+                    <h2 class="section-title">ℹ️ О проекте</h2>
+                    <div class="about-project-text">
+                        <p>Привет!</p>
+                        <p>Меня зовут Никита, и я создал этот сервис. Это частный проект от человека, который любит кино, и хочет, чтобы другие люди тоже могли комфортно смотреть фильмы и сериалы, ходить в кинотеатры, объединяться вместе и делиться своими увлечениями. Вы можете связаться со мной: <a href="https://t.me/zapnikita95" target="_blank" rel="noopener">@zapnikita95</a></p>
+                        <p><a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol" target="_blank" rel="noopener">Официальное расширение в Chrome</a><br><a href="https://vc.ru/telegram/2707791-movie-planner-bot-telegram-servis-dlya-planirovaniya-filmov-i-serialov" target="_blank" rel="noopener">Статья на vc</a><br><a href="https://pikabu.ru/story/..." target="_blank" rel="noopener">Посты-история на Пикабу</a></p>
+                        <p>Буду рад любой обратной связи!</p>
+                        <div class="about-photo-wrap"><img src="images/author.jpg" alt="Никита" class="about-photo" onerror="this.style.display='none'"></div>
+                    </div>
+                    <div class="faq-block">
+                        <h3>F.A.Q.</h3>
+                        <div class="faq-item">
+                            <div class="faq-head">Как начать пользоваться сервисом?</div>
+                            <div class="faq-body">Откройте Telegram-бота Movie Planner или установите расширение для Chrome. В боте нажмите /start — бот подскажет дальнейшие шаги. Для входа на сайт получите код командой /code в боте и введите его в форме «Войти».</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Как добавить первый фильм?</div>
+                            <div class="faq-body">В боте: отправьте ссылку на фильм с Кинопоиска или IMDb, либо воспользуйтесь поиском в меню. В расширении: откройте страницу фильма на Кинопоиске или IMDb и нажмите кнопку расширения «Добавить в Movie Planner».</div>
+                        </div>
+                        <div class="faq-item">
+                            <div class="faq-head">Как удалить информацию из бота?</div>
+                            <div class="faq-body">В Telegram-боте откройте карточку фильма или сериала и используйте кнопку удаления. Управление данными доступно только в боте.</div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
@@ -178,5 +377,6 @@
             </div>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 </html>
