Фото автора в разделе О проекте (author.png)

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <a href="https://pikabu.ru/story/..." target="_blank" rel="noopener">Посты-история на Пикабу</a>
                         </p>
                         <p>Буду рад любой обратной связи!</p>
-                        <div class="about-photo-wrap"><img src="images/author.jpg" alt="Никита" class="about-photo" onerror="this.style.display='none'"></div>
+                        <div class="about-photo-wrap"><img src="images/author.png" alt="Никита" class="about-photo" onerror="this.style.display='none'"></div>
                     </div>
                     <div class="faq-block">
                         <h3>F.A.Q.</h3>
@@ -318,7 +318,7 @@
                         <p>Меня зовут Никита, и я создал этот сервис. Это частный проект от человека, который любит кино, и хочет, чтобы другие люди тоже могли комфортно смотреть фильмы и сериалы, ходить в кинотеатры, объединяться вместе и делиться своими увлечениями. Вы можете связаться со мной: <a href="https://t.me/zapnikita95" target="_blank" rel="noopener">@zapnikita95</a></p>
                         <p><a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol" target="_blank" rel="noopener">Официальное расширение в Chrome</a><br><a href="https://vc.ru/telegram/2707791-movie-planner-bot-telegram-servis-dlya-planirovaniya-filmov-i-serialov" target="_blank" rel="noopener">Статья на vc</a><br><a href="https://pikabu.ru/story/..." target="_blank" rel="noopener">Посты-история на Пикабу</a></p>
                         <p>Буду рад любой обратной связи!</p>
-                        <div class="about-photo-wrap"><img src="images/author.jpg" alt="Никита" class="about-photo" onerror="this.style.display='none'"></div>
+                        <div class="about-photo-wrap"><img src="images/author.png" alt="Никита" class="about-photo" onerror="this.style.display='none'"></div>
                     </div>
                     <div class="faq-block">
                         <h3>F.A.Q.</h3>
