Поле кода: maxlength 12, placeholder под 10 символов

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="https://t.me/movie_planner_bot?start=code" class="btn btn-primary modal-cta" target="_blank" rel="noopener">Получить код в Telegram</a>
             <form id="login-form" class="login-form">
                 <label for="login-code">Код</label>
-                <input type="text" id="login-code" name="code" placeholder="XXXX" maxlength="8" autocomplete="one-time-code" class="input-code">
+                <input type="text" id="login-code" name="code" placeholder="XXXXXXXXXX" maxlength="12" autocomplete="one-time-code" class="input-code">
                 <p class="login-status" id="login-status"></p>
                 <button type="submit" class="btn btn-primary">Войти</button>
             </form>
