--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="movie planner, watchlist tracker, series tracker, movie tracking, TV show tracker, Telegram bot, movie planning service, film database, cinema planning, movie recommendations, series tracking, watchlist management, movie organizer, film collection manager, cinema bot, movie reminder, premiere tracker, ticket storage, online cinema tracker, streaming tracker, Амедиатека, Okko, ivi, Kinopoisk, IMDb, Letterboxd, Trakt alternative, Letterboxd alternative">
     <meta name="google-site-verification" content="BUJSpGPrPkPnVgLV2eHrFrPVTuumNdtDUwbI9CzQVwM" />
     <title>Movie Planner Bot — Планировщик кино для Telegram</title>
+    <link rel="icon" type="image/png" href="images/favicon.png" sizes="16x16">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,8 +20,10 @@
             <a href="#" class="header-logo" data-landing="landing">Movie Planner Bot</a>
             <nav class="header-nav">
                 <button type="button" class="btn btn-small btn-primary" data-action="login">Войти</button>
-                <a href="#" class="header-cabinet hidden" data-action="cabinet-name" id="header-cabinet-name"></a>
-                <button type="button" class="btn btn-small btn-secondary hidden" data-action="logout">Выйти</button>
+                <div class="header-user-wrap hidden" id="header-user-wrap">
+                    <a href="#" class="header-cabinet" data-action="cabinet-name" id="header-cabinet-name"></a>
+                    <div class="header-dropdown hidden" id="header-account-dropdown"></div>
+                </div>
             </nav>
         </div>
     </header>
@@ -182,14 +185,15 @@
                 <button type="button" class="cabinet-nav-btn" data-section="series">📺 Сериалы</button>
                 <button type="button" class="cabinet-nav-btn" data-section="ratings">⭐ Последние оценки</button>
                 <button type="button" class="cabinet-nav-btn" data-section="about">ℹ️ О проекте</button>
-            </div>
-            <div class="cabinet-plans-today" id="plans-today-wrap">
-                <h3 class="cabinet-subtitle">Планы на ближайшее время</h3>
-                <div class="plans-today-list" id="plans-today"></div>
+                <a href="#" id="cabinet-extension-link" class="btn btn-small btn-secondary cabinet-nav-extension hidden" target="_blank" rel="noopener">💻 Установить расширение</a>
             </div>
             <div class="cabinet-sections">
                 <section id="section-plans" class="cabinet-section">
                     <h2 class="section-title">📋 Планы</h2>
+                    <div class="cabinet-plans-today" id="plans-today-wrap">
+                        <h3 class="cabinet-subtitle">Планы на ближайшее время</h3>
+                        <div class="plans-today-list" id="plans-today"></div>
+                    </div>
                     <div class="plans-split">
                         <div>
                             <h3>🏠 Дома</h3>
@@ -217,16 +221,18 @@
                 </section>
                 <section id="section-about" class="cabinet-section hidden cabinet-about">
                     <h2 class="section-title">ℹ️ О проекте</h2>
-                    <div class="about-project-text">
-                        <p>Привет!</p>
-                        <p>Меня зовут Никита, и я создал этот сервис. Это частный проект от человека, который любит кино, и хочет, чтобы другие люди тоже могли комфортно смотреть фильмы и сериалы, ходить в кинотеатры, объединяться вместе и делиться своими увлечениями. Вы можете связаться со мной, если у вас есть вопросы или пожелания: <a href="https://t.me/zapnikita95" target="_blank" rel="noopener">@zapnikita95</a></p>
-                        <p>
-                            <a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol" target="_blank" rel="noopener">Официальное расширение в Chrome</a><br>
-                            <a href="https://vc.ru/telegram/2707791-movie-planner-bot-telegram-servis-dlya-planirovaniya-filmov-i-serialov" target="_blank" rel="noopener">Статья на vc</a><br>
-                            <a href="https://pikabu.ru/story/..." target="_blank" rel="noopener">Посты-история на Пикабу</a>
-                        </p>
-                        <p>Буду рад любой обратной связи!</p>
+                    <div class="about-project-block">
                         <div class="about-photo-wrap"><img src="images/author.png" alt="Никита" class="about-photo" onerror="this.style.display='none'"></div>
+                        <div class="about-project-text">
+                            <p>Привет!</p>
+                            <p>Меня зовут Никита, и я создал этот сервис. Это частный проект от человека, который любит кино, и хочет, чтобы другие люди тоже могли комфортно смотреть фильмы и сериалы, ходить в кинотеатры, объединяться вместе и делиться своими увлечениями. Вы можете связаться со мной, если у вас есть вопросы или пожелания: <a href="https://t.me/zapnikita95" target="_blank" rel="noopener">@zapnikita95</a></p>
+                            <p>
+                                <a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol" target="_blank" rel="noopener">Официальное расширение в Chrome</a><br>
+                                <a href="https://vc.ru/telegram/2707791-movie-planner-bot-telegram-servis-dlya-planirovaniya-filmov-i-serialov" target="_blank" rel="noopener">Статья на vc</a><br>
+                                <a href="https://pikabu.ru/story/..." target="_blank" rel="noopener">Посты-история на Пикабу</a>
+                            </p>
+                            <p>Буду рад любой обратной связи!</p>
+                        </div>
                     </div>
                     <div class="faq-block">
                         <h3>F.A.Q.</h3>
@@ -258,6 +264,7 @@
                 <button type="button" class="cabinet-nav-btn" data-section="onboard-series">📺 Сериалы</button>
                 <button type="button" class="cabinet-nav-btn" data-section="onboard-ratings">⭐ Оценки</button>
                 <button type="button" class="cabinet-nav-btn" data-section="onboard-about">ℹ️ О проекте</button>
+                <a href="#" id="cabinet-extension-link-onboard" class="btn btn-small btn-secondary cabinet-nav-extension hidden" target="_blank" rel="noopener">💻 Установить расширение</a>
             </div>
             <div class="cabinet-sections onboarding-sections">
                 <section id="section-onboard-main" class="cabinet-section">
@@ -313,12 +320,14 @@
                 </section>
                 <section id="section-onboard-about" class="cabinet-section hidden cabinet-about">
                     <h2 class="section-title">ℹ️ О проекте</h2>
-                    <div class="about-project-text">
-                        <p>Привет!</p>
-                        <p>Меня зовут Никита, и я создал этот сервис. Это частный проект от человека, который любит кино, и хочет, чтобы другие люди тоже могли комфортно смотреть фильмы и сериалы, ходить в кинотеатры, объединяться вместе и делиться своими увлечениями. Вы можете связаться со мной: <a href="https://t.me/zapnikita95" target="_blank" rel="noopener">@zapnikita95</a></p>
-                        <p><a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol" target="_blank" rel="noopener">Официальное расширение в Chrome</a><br><a href="https://vc.ru/telegram/2707791-movie-planner-bot-telegram-servis-dlya-planirovaniya-filmov-i-serialov" target="_blank" rel="noopener">Статья на vc</a><br><a href="https://pikabu.ru/story/..." target="_blank" rel="noopener">Посты-история на Пикабу</a></p>
-                        <p>Буду рад любой обратной связи!</p>
+                    <div class="about-project-block">
                         <div class="about-photo-wrap"><img src="images/author.png" alt="Никита" class="about-photo" onerror="this.style.display='none'"></div>
+                        <div class="about-project-text">
+                            <p>Привет!</p>
+                            <p>Меня зовут Никита, и я создал этот сервис. Это частный проект от человека, который любит кино, и хочет, чтобы другие люди тоже могли комфортно смотреть фильмы и сериалы, ходить в кинотеатры, объединяться вместе и делиться своими увлечениями. Вы можете связаться со мной: <a href="https://t.me/zapnikita95" target="_blank" rel="noopener">@zapnikita95</a></p>
+                            <p><a href="https://chromewebstore.google.com/detail/movie-planner-bot/fldeclcfcngcjphhklommcebkpfipdol" target="_blank" rel="noopener">Официальное расширение в Chrome</a><br><a href="https://vc.ru/telegram/2707791-movie-planner-bot-telegram-servis-dlya-planirovaniya-filmov-i-serialov" target="_blank" rel="noopener">Статья на vc</a><br><a href="https://pikabu.ru/story/..." target="_blank" rel="noopener">Посты-история на Пикабу</a></p>
+                            <p>Буду рад любой обратной связи!</p>
+                        </div>
                     </div>
                     <div class="faq-block">
                         <h3>F.A.Q.</h3>
