Планы: новая карточка (постер | дата+тип сверху, название снизу | кнопка). Непросмотренные: сортировка Сначала новые/старые. Пробелы после эмодзи.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
                         <div class="unwatched-toolbar">
                             <label for="unwatched-sort">Сортировка:</label>
                             <select id="unwatched-sort" class="unwatched-sort-select" aria-label="Сортировка непросмотренных">
-                                <option value="date">по дате добавления</option>
+                                <option value="date">Сначала новые</option>
+                                <option value="date_old">Сначала старые</option>
                                 <option value="az">от А к Я</option>
                                 <option value="za">от Я к А</option>
                             </select>
