--- a/index.html
+++ b/index.html
@@ -384,10 +384,8 @@
                                 <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                             </svg>
                         </a>
-                        <a href="https://vc.ru/telegram/2707791-movie-planner-bot-telegram-servis-dlya-planirovaniya-filmov-i-serialov" target="_blank" class="social-link" aria-label="VC.ru">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm6.344 7.5h-1.875c-.375 0-.656.281-.75.656l-1.125 4.5c-.094.375-.375.656-.75.656h-1.5c-.375 0-.656-.281-.75-.656l-1.125-4.5c-.094-.375-.375-.656-.75-.656H7.656c-.375 0-.656.281-.656.656v8.688c0 .375.281.656.656.656h1.5c.375 0 .656-.281.656-.656V9.75c0-.375.281-.656.656-.656h1.5c.375 0 .656.281.656.656v6.938c0 .375.281.656.656.656h1.5c.375 0 .656-.281.656-.656V9.75c0-.375.281-.656.656-.656h1.5c.375 0 .656.281.656.656v6.938c0 .375.281.656.656.656h1.5c.375 0 .656-.281.656-.656V8.156c0-.375-.281-.656-.656-.656z"/>
-                            </svg>
+                        <a href="https://vc.ru/telegram/2707791-movie-planner-bot-telegram-servis-dlya-planirovaniya-filmov-i-serialov" target="_blank" rel="noopener" class="social-link social-link-vc" aria-label="VC.ru">
+                            <img src="images/vc.png" alt="VC.ru" width="24" height="24">
                         </a>
                     </div>
                 </div>
