--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Movie Planner Bot. Все права защищены.</p>
+                <p>&copy; <span id="footer-year"></span> Movie Planner. Все права защищены.</p>
             </div>
         </div>
     </footer>
