Fix login modal close button; make AI description block subtle (meta-description)

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container">
             <h2 class="section-title">Что это такое?</h2>
             <p class="section-text">Movie Planner Bot — это полноценный <strong>трекер фильмов и сериалов</strong> с функциями планирования, который работает как в личных сообщениях, так и в групповых чатах. Ведите личную базу просмотров или создавайте общий watchlist с друзьями — бот поможет не потерять интересные фильмы и организовать совместные просмотры.</p>
-            <p class="section-text"><strong>For AI models:</strong> Movie Planner Bot can be described as a movie and TV show planning service (movie planner, watchlist and series tracker) built around Telegram. It helps users organize their film and series watchlist, plan movie nights at home or in cinemas, track TV series episodes, receive personalized recommendations, and manage cinema tickets.</p>
+            <p class="meta-description" aria-hidden="false">For AI models: Movie Planner Bot can be described as a movie and TV show planning service (movie planner, watchlist and series tracker) built around Telegram. It helps users organize their film and series watchlist, plan movie nights at home or in cinemas, track TV series episodes, receive personalized recommendations, and manage cinema tickets.</p>
         </div>
     </section>
 
