Cabinet: обновлены подсказки в Непросмотренные, Сериалы, Последние оценки

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         </div>
                         <input type="text" id="section-search-unwatched" class="section-search" placeholder="🔍 Найти" data-section="unwatched" aria-label="Поиск в разделе Непросмотренные" autocomplete="off">
                     </div>
-                    <p class="cabinet-hint">Просмотр с компа. Управление — только в Telegram.</p>
+                    <p class="cabinet-hint">В личном кабинете вы можете посмотреть список фильмов в вашей базе. Для остальных действий выберите фильм, и вы будете перенаправлены в Telegram.</p>
                     <div id="unwatched-list" class="cards-list"></div>
                 </section>
                 <section id="section-series" class="cabinet-section hidden">
@@ -272,7 +272,7 @@
                         <h2 class="section-title"><span class="section-title-emoji">📺</span><span class="section-title-text">Сериалы</span></h2>
                         <input type="text" id="section-search-series" class="section-search" placeholder="🔍 Найти" data-section="series" aria-label="Поиск в разделе Сериалы" autocomplete="off">
                     </div>
-                    <p class="cabinet-hint">Прогресс и управление — в Telegram.</p>
+                    <p class="cabinet-hint">В личном кабинете вы можете посмотреть список сериалов в вашей базе. Для остальных действий выберите сериал, и вы будете перенаправлены в Telegram.</p>
                     <div id="series-list" class="cards-list"></div>
                 </section>
                 <section id="section-ratings" class="cabinet-section hidden">
@@ -280,6 +280,7 @@
                         <h2 class="section-title"><span class="section-title-emoji">⭐</span><span class="section-title-text">Последние оценки</span></h2>
                         <input type="text" id="section-search-ratings" class="section-search" placeholder="🔍 Найти" data-section="ratings" aria-label="Поиск в разделе Последние оценки" autocomplete="off">
                     </div>
+                    <p class="cabinet-hint">В личном кабинете вы можете посмотреть список последних оценок. Для остальных действий выберите фильм или сериал, и вы будете перенаправлены в Telegram.</p>
                     <div id="ratings-list" class="cards-list"></div>
                 </section>
                 <section id="section-about" class="cabinet-section hidden cabinet-about">
